fixed opacity issue for elements inside wrappr and resizing issue gor landing page bg

--- a/src/styles/1-basics/_global.sass
+++ b/src/styles/1-basics/_global.sass
@@ -4,7 +4,7 @@ html, body
     height: 100%
 
 body
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Avenier, Helvetica, sans-serif
     overflow-x: hidden
     // background-color: $bg
     // overflow-y: hidden
