--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Avenier, Helvetica, sans-serif;
   overflow-x: hidden;
 }
 
@@ -716,25 +716,29 @@ footer span button {
 }
 
 .landing-page {
-  background-image: url("../assets/DFP_CoverArt.png");
+  background: url("../assets/DFP_CoverArt.png") no-repeat center center fixed;
   height: 100vh;
-  width: 100vw;
-  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
 }
-.landing-page section {
+.landing-page .opaque-wrapper {
   position: absolute;
-  height: 95%;
+  height: 96%;
   width: 96%;
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  top: 25px;
+  top: 0;
+  bottom: 0;
+  margin-top: auto;
+  margin-bottom: auto;
   background-color: black;
   opacity: 0.8;
 }
-.landing-page section nav {
+.landing-page nav {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -743,25 +747,25 @@ footer span button {
   height: 30px;
   position: absolute;
   left: calc(50% - 280px/2);
-  top: 20px;
+  top: 35px;
   justify-content: space-between;
 }
-.landing-page section nav li {
+.landing-page nav li {
   color: white;
   font-family: Avenir;
   font-style: normal;
   font-weight: 900;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 18px;
   letter-spacing: 0.5px;
 }
-.landing-page section .hero {
+.landing-page nav .hero {
   position: absolute;
   width: 70%;
   height: 692px;
   top: 50px;
 }
-.landing-page section .hero p {
+.landing-page nav .hero p {
   color: white;
   font-family: Avenir;
   font-style: normal;
@@ -771,18 +775,18 @@ footer span button {
   text-align: center;
   letter-spacing: 0.5px;
 }
-.landing-page section .hero p:nth-of-type(1) {
+.landing-page nav .hero p:nth-of-type(1) {
   font-size: 180px;
   margin-top: 80px;
   margin-bottom: 0px;
   line-height: 166px;
 }
-.landing-page section .hero p:nth-of-type(2) {
+.landing-page nav .hero p:nth-of-type(2) {
   font-size: 100px;
   margin-top: 80px;
   z-index: 5;
 }
-.landing-page section .hero img {
+.landing-page nav .hero img {
   position: absolute;
   width: 450px;
   height: 500px;
